--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "cookie-parser": "~1.4.5",
     "debug": "~4.2.0",
+    "dotenv": "^8.2.0",
     "ejs": "~3.1.5",
     "express": "~4.17.1",
+    "express-ejs-extend": "0.0.1",
+    "firebase-admin": "^9.2.0",
     "http-errors": "~1.8.0",
     "morgan": "~1.10.0"
   }
