--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.17.1",
     "firebase-admin": "^9.2.0",
     "http-errors": "~1.8.0",
-    "morgan": "~1.10.0"
+    "moment": "^2.29.1",
+    "morgan": "~1.10.0",
+    "striptags": "^3.1.1"
   }
 }
