--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.17.1",
     "express-ejs-extend": "0.0.1",
     "express-session": "^1.17.1",
+    "firebase": "^7.23.0",
     "firebase-admin": "^9.2.0",
     "http-errors": "~1.8.0",
     "moment": "^2.29.1",
